# docs/swagger.yaml
@@ -32,27 +32,6 @@ info:
   version: "1.0"
 paths:
   /api/v1/task:
-    get:
-      consumes:
-      - application/json
-      description: Get all tasks
-      operationId: get-all-tasks
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/entity.Task'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/v1.errResponse'
-      summary: GetAllTasks
-      tags:
-      - task
     post:
       consumes:
       - application/json
@@ -138,6 +117,28 @@ paths:
           schema:
             $ref: '#/definitions/v1.errResponse'
       summary: GetTaskById
+      tags:
+      - task
+  /api/v1/tasks:
+    get:
+      consumes:
+      - application/json
+      description: Get all tasks
+      operationId: get-all-tasks
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.Task'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.errResponse'
+      summary: GetAllTasks
       tags:
       - task
 swagger: "2.0"
